@@ -1,3 +1,7 @@
+2016-10-12  Patrick Eriksson  <patrick.eriksson@chalmers.se>
+
+	* Mscripts_atmlab/dimens.m: Copied from Atmlab.
+
 2016-09-23  Patrick Eriksson  <patrick.eriksson@chalmers.se>
 
 	* Mscripts_arts/q2_inv.m (subfun4retqs): Species retrieval grid
